...

  @override
  Widget build(BuildContext context) {
    final appInfoService = getIt<AppInfoService>();
    return Scaffold(
      appBar: AppBar(
        title: const Text('VK Wrapped'),
        actions: [
          IconButton(
            icon: const Icon(Icons.settings),
            onPressed: () {
              context.router.push(const SettingsRoute());
            },
...
                    const Gap(32),
                    ElevatedButton.icon(
                      onPressed: () {
                        context.router.push(const StatisticsRoute());
                      },
                      icon: const Icon(Icons.analytics),
                      label: const Text('Посмотреть статистику'),
                    ),
                    const Gap(16),
                    ElevatedButton.icon(
                      onPressed: () {
                        context.router.push(const ListenedRoute());
                      },
...
                    const Gap(16),
                    ElevatedButton.icon(
                      onPressed: () {
                        context.router.push(const SettingsRoute());
                      },
                      icon: const Icon(Icons.vpn_key),
                      label: const Text('Настроить VK токен'),
                    ),
                    const Gap(16),
                    ElevatedButton.icon(
                      onPressed: () {
                        context.router.push(const IntroRoute());
                      },
...
